monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
      - monitoring.eol-ing.uchile.cl
      secretName: argocd-ingress-cert
  rules:
    - host: monitoring.eol-ing.uchile.cl
      http:
        paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
